Fixed all eclipse warnings.